--- a/lang/tr.json
+++ b/lang/tr.json
@@ -24,10 +24,10 @@
     "reachSupport": "Lütfen destek ekibimize ulaşın.",
     "contactUsButton": "İletişime Geç",
     "interpreterFormAccess": "Tercüman olmak için aşağıdaki formu doldurabilirsiniz. Tercüman listesine buradan erişebilirsiniz.",
-    "firstName": "İsim",
-    "firstNameInputHelper": "İsim giriniz..",
-    "lastName": "Soyisim",
-    "lastNameInputHelper": "Soyisim giriniz..",
+    "firstNameInputTitle": "İsim",
+    "firstNameInputHint": "İsim giriniz..",
+    "lastNameInputTitle": "Soyisim",
+    "lastNameInputHint": "Soyisim giriniz..",
     "supportChannels": "Destek Kanallari",
     "onsiteSupport": "Sahada Destek",
     "onlineSupport": "Dijital/Online Destek",
