feat: add become translator (#55)
* feat: add become translator

* Update app_provider.dart

* upd: created components examples added

--- a/lang/tr.json
+++ b/lang/tr.json
@@ -28,7 +28,7 @@
     "firstNameInputHint": "İsim giriniz..",
     "lastNameInputTitle": "Soyisim",
     "lastNameInputHint": "Soyisim giriniz..",
-    "supportChannels": "Destek Kanallari",
+    "supportChannels": "Destek Kanalları",
     "onsiteSupport": "Sahada Destek",
     "onlineSupport": "Dijital/Online Destek",
     "availableSupport": "Destek Verebileceğim Diller",
