feat: added updated translation json

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,27 +1,50 @@
 {
-    "appTitle": "مترجم باحث",
-    "fullName": "اسمك الكامل",
-    "fullNameHelper": "من فضلك، يرجى كتابة اسمك ولقبك",
-    "phoneNumber": "رقم هاتفك",
-    "phoneNumberHelper": "من فضلك، يرجى كتابة رقم الهاتف بهذه الطريقة +90XXXXXXXXX",
-    "yourLanguage": "أتحدث بطريقة عريضة",
-    "yourLanguageHelper": "من فضلك، يرجى كتابة اللغات التي تتحدث بها بطريقة عريضة",
-    "register": "تسجيل الدخول",
-    "iAgree": "أوافق",
-    "tcpp":  "معلومات حول حماية البيانات: \n \n تم إنشاء هذا التطبيق من قبل متطوعين يعملون في مجال تقنيات المعلومات من أجل جمع جهود البحث والإنقاذ والمساعدة والدعم في قاعدة بيانات مشتركة في كارثة الزلزال العظيم الذي وقع في تركيا في فبراير 6 ، 2023 ونقلها إلى المؤسسات والمنظمات المعتمدة. \n \n ستتم معالجة البيانات الشخصية للأشخاص الذين تحددهم بحاجة إلى مساعدة أو دعم تلقائيًا ، بناءً على السبب القانوني ، إذا كان ذلك ضروريًا لحماية الحياة أو السلامة الجسدية للشخص أو أي شخص آخر ، غير قادر على التعبير عن موافقته بسبب استحالة فعلية أو موافقته غير صالحة قانونًا. \n \n ستتم معالجة البيانات الشخصية الخاصة بك بناءً على السبب القانوني الذي يجعل معالجة البيانات إلزامي لإنشاء وممارسة وحماية حق ما. وسيتم جمع خوادمها في قاعدة بيانات موجودة في الدولة وخارجها ، وسيتم مشاركتها مع منظمات البحث والإنقاذ المعتمدة مثل Afad و Akut و Kızılay ، وكذلك المنظمات غير الحكومية التي يمكنها تلبية طلبات الدعم والمساعدة ، و المترجمين ، لأغراض معالجة البيانات الشخصية.",
-    "welcomeText": "الترجمة التطوعية",
-    "welcomeHeader": "اعثر على مترجم بسرعة!",
-    "welomeBody": "اعثر على مترجمين بأي لغة بسرعة وسهولة وتواصل معهم مباشرة على منصتنا!",
-    "beInterpreter": "كن مترجمًا",
-    "searchInterpreter": "ابحث عن مترجم",
-    "fAskedQuestions": "أسئلة مكررة",
-    "thingsToKnow": "ما تحتاج لمعرفته حول منصة البحث عن المترجم.",
-    "becomeVolunteerHeader": "كيف يمكنني أن أصبح مترجما متطوعا؟?",
-    "becomeVolunteerBody": "لكي تصبح مترجمًا متطوعًا ، يجب عليك ملء استمارة التسجيل لمنصة البحث عن مترجم ذات الصلة وتحديد المعلومات اللازمة وتجربة الترجمة..",
-    "interpreterResponsibilities": "ما هي المسؤوليات التي تقع على عاتقي عند الترجمة؟?",
-    "communicateOtherTranslator": "كيف يمكنني التواصل مع مترجمين آخرين أثناء الترجمة؟?",
-    "cantFind": "لم تجد الإجابة التي كنت تبحث عنها?",
-    "reachSupport": "يرجى الاتصال بفريق الدعم لدينا.",
-    "contactUsButton": "اتصل بنا"
-  }
-  
+  "appTitle": "اسم التطبيق",
+  "fullName": "اسمك الكامل",
+  "fullNameHelper": "من فضلك، يرجى كتابة اسمك ولقبك",
+  "phoneNumber": "رقم هاتفك",
+  "phoneNumberHelper": "من فضلك، يرجى كتابة رقم الهاتف بهذه الطريقة +90XXXXXXXXX",
+  "yourLanguage": "اللغة",
+  "yourLanguageHelper": "من فضلك، يرجى كتابة اللغة التي تتحدث بها",
+  "register": "تسجيل الدخول",
+  "iAgree": "أوافق",
+  "tcpp": "معلومات حول حماية البيانات: \n \n تم إنشاء هذا التطبيق من قبل متطوعين يعملون في مجال تقنيات المعلومات من أجل جمع جهود البحث والإنقاذ والمساعدة والدعم في قاعدة بيانات مشتركة في كارثة الزلزال العظيم الذي وقع في تركيا في فبراير 6 ، 2023 ونقلها إلى المؤسسات والمنظمات المعتمدة. \n \n ستتم معالجة البيانات الشخصية تلقائيًا للأشخاص الذين تحددهم المحتاجين إلى مساعدة أو دعم، ولأسباب قانونية ، إذا كان من الضروري لحماية الحياة أو السلامة الجسدية للشخص أو أي شخص آخر ، غير قادر على التعبير عن موافقته بسبب استحالة فعلية أو أنه غير مؤهل قانونًا . \n \n ستتم معالجة البيانات الشخصية الخاصة بك بناءً على السبب القانوني الذي يجعل معالجة البيانات إلزامي لإنشاء وممارسة وحماية حق ما. وسيتم جمع المخدمات في قاعدة بيانات موجودة في الدولة وخارجها ، وسيتم مشاركتها مع منظمات البحث والإنقاذ المعتمدة مثل Afad و Akut و Kızılay ، وكذلك المنظمات غير الحكومية التي يمكنها تلبية طلبات الدعم والمساعدة ، و المترجمين ، لأغراض معالجة البيانات الشخصية.",
+  "welcomeText": "الترجمة التطوعية",
+  "welcomeHeader": "اعثر على مترجم بسرعة!",
+  "welomeBody": "اعثر على مترجمين بأي لغة بسرعة وسهولة وتواصل معهم مباشرة على منصتنا!",
+  "beInterpreter": "كن مترجمًا",
+  "searchInterpreter": "ابحث عن مترجم",
+  "fAskedQuestions": "أسئلة مكررة",
+  "thingsToKnow": "ما تحتاج معرفته حول منصة البحث عن المترجم.",
+  "becomeVolunteerHeader": "كيف يمكنني أن أصبح مترجما متطوعا؟?",
+  "becomeVolunteerBody": "لكي تصبح مترجمًا متطوعًا ، يجب عليك ملء استمارة التسجيل لمنصة البحث عن مترجم ذات الصلة وتحديد المعلومات اللازمة وتجربة الترجمة..",
+  "interpreterResponsibilities": "ما هي المسؤوليات التي تقع على عاتقي عند الترجمة؟?",
+  "communicateOtherTranslator": "كيف يمكنني التواصل مع مترجمين آخرين أثناء الترجمة؟?",
+  "cantFind": "لم تجد الإجابة التي كنت تبحث عنها?",
+  "reachSupport": "يرجى الاتصال بفريق الدعم لدينا.",
+  "contactUsButton": "اتصل بنا",
+  "interpreterFormAccess": "يمكنك ملء النموذج التالي لتصبح مترجمًا. يمكنك الوصول إلى قائمة المترجمين هنا.",
+  "firstNameInputTitle": "الاسم الأول",
+  "firstNameInputHint": "أدخل الاسم الأول...",
+  "lastNameInputTitle": "الكنية",
+  "lastNameInputHint": "أدخل الكنية...",
+  "supportChannels": "طرق الدعم",
+  "onsiteSupport": "دعم على الموقع",
+  "onlineSupport": "دعم عبر الإنترنت / الرقي",
+  "availableSupport": "لغات الدعم التي يمكنني توفيرها",
+  "addContactAddress": "أضف عنوان الاتصا",
+  "addFacebook": "أدخل عنوان Facebook الخاص بك...",
+  "addInstagram": "أدخل عنوان Instagram الخاص بك...",
+  "addTwitter": "أدخل عنوان Twitter الخاص بك...",
+  "addLinkedin": "أدخل عنوان LinkedIn الخاص بك...",
+  "consentForm": "لقد قرأت نص الخصوصية وأوافق عليه.",
+  "infoVerification": "أوافق وأصرح بأن المعلومات التي قدمتها بشأن المساعدة والدعم صحيحة ومؤكدة ، وأنني اتخذت جميع الاحتياطات والتدابير اللازمة لمنع الاستخدم الغير قانوني للمعلومات والممارسات الخاطئة ، وأنني سأبلغ عن أي تغييرات وتحديثات في المعلومات التي قدمتها", 
+  "interpreterList": "قائمة المترجم",
+  "applyInterpreter": "يمكنك الوصول إلى قائمة المترجم عبر الجدول في الاسفل. يمكن إجراء طلب جديد للمترجم هنا.",
+  "nameLastName": "الاسم- الكنية",
+  "translationLanguage": "لغة الترجمة",
+  "contact": "التواصل",
+  "interpreterNameLastName": "اسم المترجم و الكنية",
+  "before": "قبل",
+  "after": "بعد"
+}
