--- a/lang/en.json
+++ b/lang/en.json
@@ -23,8 +23,28 @@
   "cantFind": "Did you not find the answer you were looking for??",
   "reachSupport": "Please reach out to our support team.",
   "contactUsButton": "Get in Touch.",
+  "interpreterFormAccess": "You can fill out the form below to become a Interpreter. You can find the list of Interpreters here.",
   "firstNameInputTitle": "First Name",
   "firstNameInputHint": "Please enter first name..",
   "lastNameInputTitle": "Last Name",
-  "lastNameInputHint": "Please enter last name.."
+  "lastNameInputHint": "Please enter last name..",
+  "supportChannels": "Support Channels",
+  "onsiteSupport": "On-site Support",
+  "onlineSupport": "Digital/Online Support",
+  "availableSupport": "Languages I Can Support",
+  "addContactAddress": "Add Contact Address",
+  "addFacebook": "Enter your Facebook address..",
+  "addInstagram": "Enter your Instagram address.",
+  "addTwitter": "Enter your Twitter address.",
+  "addLinkedin": "Enter your LinkedIn address.",
+  "consentForm": "I have read and accept the Lighting Confirmation Text.",
+  "infoVerification": "I accept and declare that the information I have provided on debris, demolition, aid and support needs is correct and confirmed, that I have taken all necessary precautions and measures to prevent information pollution and misapplications, and that I will notify any changes and updates in the information I have given.",
+  "interpreterList": "interpreter List",
+  "applyInterpreter": "You can find the list of interpreter in the table below. You can apply for a new interpreter here.",
+  "nameLastName": "Name & Surname",
+  "translationLanguage": "Translation Language",
+  "contact": "Contact",
+  "interpreterNameLastName": "Interpreter Name and Last Name",
+  "before": "Before",
+  "after": "After"
 }
