fix: updated tr json

--- a/lang/tr.json
+++ b/lang/tr.json
@@ -1,50 +1,50 @@
 {
-  "appTitle": "Wergêr Peydaker",
-  "fullName": "Navê Te Tev",
-  "fullNameHelper": "Ji kerema xwe nav û paşnavê xwe binivîse",
-  "phoneNumber": "Hejmara telefona te",
-  "phoneNumberHelper": "Ji kerema xwe hejmara telefona xwe bi vî rengî binivîsin +90XXXXXXXXX",
-  "yourLanguage": "Ez Baş Dizanim",
-  "yourLanguageHelper": "Ji kerema xwe zimanên ku hûn baş dizanin binivîsin",
-  "register": "Qeyd Bibe",
-  "iAgree": "Ez razî me",
-  "tcpp": "Agahiyên li ser Parastina Daneyan:\n\nEv sepan, ji hêla dildarên ku di warê teknolojiyên agahdariyê de dixebitin hatiye amadekirin. Armanca wê ew e ku hemû daxwaz û pêdiviyên kesên ji ber Erdheja mezin ya roja 06.02.2023, li Tirkiyê pêk hatiye de mexdûr bûne, li cihekî kom bike û wan agahiyan/daneyan bigihîne sazî û kesên berpirsiyar. Herwiha bi vê sepanê wê hewl bê dayîn ku xebatên lêgerîn û xelaskirinê bi awayekî organîzetir were li dar xistin.\n\nDaneyên şexsî yên kesên ku hûn bawer dikin pêdiviya wan bi arîkarî an piştgiriyê heye, heke ew kes di rewşeke wisa de bin ku nikaribin bi xwe îcazetê bidin, wê ji ber sedemên awarte, daneyê wan kesan, bi awayekî otomatik, bixweber were xebitandin. Sedemên awarte çi ne? Astengiyên huqûqî, parastina yekîtiya laş û xelaskirina can, û rewşên  wekî din yê heyatî. \n\nDaneyên we yên şexsî dê bi saya bingehên qanûnî were bikaranîn çimkî mecbûrî ye ku daneyên şexsî ji bo parastina mafên mirovan werin bikaranîn. \n\nAgahiyên ku hûn bi me re parve dikin, wê li ser serverê me yên li nava welêt û derveyî welêt werin kom kirin. Dûre wê bi saziyên berpirsiyar yên wek Afad, Akut, Kızılay re bi awayekî qismî were parve kirin. Herwiha wê ev agahî bo tîm û komên lêgrîn û xelaskirinê bê dayîn, saziyên civakî yê sivîl û wergêran re jî bi awayekî qismî were parve kirin.",
-  "welcomeText": "Wergêrîya Xwebexşî",
-  "welcomeHeader": "Zû wergerek peyda bike!",
-  "welomeBody": "Zû û bi hêsanî wergêrên bi her zimanî bibîne û rasterast li ser platforma me bi wan re têkilî dane!",
-  "beInterpreter": "Bibe Wergêr",
-  "searchInterpreter": "Wergêrekî bibîne",
-  "fAskedQuestions": "Pirsên pir caran tên pirsîn",
-  "thingsToKnow": "Tiştê ku divê hûn di derbarê platforma Wergêr Peydaker de zanîbin.",
-  "becomeVolunteerHeader": "Ez çawa dikarim bibim wergêrekî xwebexş?",
-  "becomeVolunteerBody": "Ji bo ku hûn bibin wergêrek xwebexş, divê hûn forma qeydkirinê ya platforma têkildar a Wergêr Peydaker dagirin û agahiyen lazim û tecrûbeya xwe li ser wergerê destnîşan bikin.",
-  "interpreterResponsibilities": "Di dema wergerê de berpisiyarî yên min çine?",
-  "communicateOtherTranslator": "Di dema wergerê de ez çawa dikarim bi wergêrên din re têkiliyê daynim?",
-  "cantFind": "Bersiva ku hûn lê digeriyan nehat dîtin?",
-  "reachSupport": "Ji kerema xwe bi tîma piştgiriyê re têkilî daynin.",
-  "contactUsButton": "Bikeve Têkiliyê",
-  "interpreterFormAccess": "Ger ku tu bixwazî bibî wergêr forma jêr dagire. Dikarî ji vir bigihijî lîsteya wergêran.",
-  "firstNameInputTitle": "Nav",
-  "firstNameInputHint": "Navê xwe binivîse...",
-  "lastNameInputTitle": "Paşnav",
-  "lastNameInputHint": "Paşnavê xwe binivîse...",
-  "supportChannels": "Qenalên Piştgiriyê",
-  "onsiteSupport": "Piştgiriya Li Qadê",
-  "onlineSupport": "Piştgiriya Dîjîtal/Liserxetê",
-  "availableSupport": "Zimanên Ku Ez ê Piştgiriyê Bidim Wan",
-  "addContactAddress": "Navnîşana Xwe ya Ragihandinê Tevlê Bike",
-  "addFacebook": "Navnîşana Xwe ya Facebookê Binivîse",
-  "addInstagram": "Navnîşana Xwe ya Instagramê Binivîse",
-  "addTwitter": "Navnîşana Xwe ya Twitterê Binivîse",
-  "addLinkedin": "Navnîşana Xwe ya Linkedinê Binivîse",
-  "consentForm": "Min Nivîsara Zelalkirinê xwend û qebûl kir.",
-  "infoVerification": "Di agahdariya ku min daye ez qebûl dikim û radigihînim ku agahdariya ku min li ser mayîn, hilweşandin, alîkarî û hewcedariyên piştgiriyê dane rast û piştrast in, ku min hemî tedbîr û tedbîrên pêwîst girtine ji bo pêşîgirtina li qirêjiya agahdarî û kiryarên xelet, û ku ez ê ji her guhertin û nûvekirinan ragihînim.",
-  "interpreterList": "Lîsteya Wergêran",
-  "applyInterpreter": "Hûn dikarin lîsteya wergêran di tabloya jêrîn de bibînin. Hûn dikarin li vir ji bo wergerek nû serlêdan bikin.",
-  "nameLastName": "Nav & Parşnav",
-  "translationLanguage": "Zimanê wergerê",
-  "contact": "Têkelî",
-  "interpreterNameLastName": "Nav û Paşnavê Wergêr",
-  "before": "Berî",
-  "after": "Piştî"
+  "appTitle": "Tercuman Bulucu",
+  "fullName": "Tam İsminiz",
+  "fullNameHelper": "Lütfen adınızı ve soyadınız yazınız",
+  "phoneNumber": "Telefon Numaramanız",
+  "phoneNumberHelper": "Lütfen telefon numaranızı bu şekilde yazın +90XXXXXXXXX",
+  "yourLanguage": "Akıcı Şekilde Konuşuyorum",
+  "yourLanguageHelper": "Lütfen akıcı bir şekilde konuştuğunuz dilleri yazınız",
+  "register": "Kayıt Ol",
+  "iAgree": "Kabul Ediyorum",
+  "tcpp": "Verilerin Korunması Hakkında Bilgilendirme:\n\nBu uygulama, 6 Şubat 2023 tarihinde Türkiye’de meydana gelen büyük deprem felaketinde, arama kurtarma çalışmaları ile yardım ve destek taleplerini ortak bir veri tabanında toplayarak yetkili kurum ve kuruluşlara aktarmak amacıyla bilişim teknolojileri alanında çalışan gönüllüler tarafından oluşturulmuştur.\n\nYardım ya da desteğe ihtiyacı olduğunu belirttiğiniz kişilerin kişisel verileri, Fiili imkânsızlık nedeniyle rızasını açıklayamayacak durumda bulunan veya rızasına hukuki geçerlilik tanınmayan kişinin kendisinin ya da bir başkasının hayatı veya beden bütünlüğünün korunması için zorunlu olması, hukuki sebebine dayanarak, otomatik yollarla işlenecektir.\n\nTarafınıza ait kişisel veriler, Bir hakkın tesisi, kullanılması ve korunması için veri işlemenin zorunlu olması, hukuki sebebine dayanarak işlenecektir.\n\nPaylaşacağınız yardım, destek taleplerinde yer alan isim, soyisim, telefon ve adres gibi kişisel veriler, tarafımızca oluşturulan ve sunucuları yurtiçi ve yurtdışında bulunan veri tabanında toplanarak, Afad, Akut, Kızılay gibi yetkili arama kurtarma kuruluşlarının yanı sıra destek ve yardım taleplerini karşılayabilecek sivil toplum kuruluşları ve Tercümanlar ile kişisel veri işleme amacı ile sınırlı olarak paylaşılacaktır.",
+  "welcomeText": "Gönüllü Tercümanlık",
+  "welcomeHeader": "Hızla tercüman bul!",
+  "welomeBody": "Herhangi bir dilde hızla ve kolayca tercüman bulun ve onlarla doğrudan platformumuz üzerinden iletişim kurun!",
+  "beInterpreter": "Tercüman Ol",
+  "searchInterpreter": "Tercüman Bul",
+  "fAskedQuestions": "Sıkça Sorulan Sorular",
+  "thingsToKnow": "Tercümanbul platformu hakkında bilmeniz gerekenler.",
+  "becomeVolunteerHeader": "Nasıl gönüllü tercüman olabilirim?",
+  "becomeVolunteerBody": "Gönüllü tercüman olmak için ilgili Tercümanbul platformunun kayıt formunu doldurup gerekli bilgileri ve tercüme deneyimini belirtmeniz gerekmektedir.",
+  "interpreterResponsibilities": "Tercüme yaparken ne gibi sorumluluklarım var?",
+  "communicateOtherTranslator": "Tercüme yaparken diğer tercümanlarla nasıl iletişim kurabilirim?",
+  "cantFind": "Aradığınız cevabı bulamadınız mı?",
+  "reachSupport": "Lütfen destek ekibimize ulaşın.",
+  "contactUsButton": "İletişime Geç",
+  "interpreterFormAccess": "Tercüman olmak için aşağıdaki formu doldurabilirsiniz. Tercüman listesine buradan erişebilirsiniz.",
+  "firstNameInputTitle": "İsim",
+  "firstNameInputHint": "İsim giriniz..",
+  "lastNameInputTitle": "Soyisim",
+  "lastNameInputHint": "Soyisim giriniz..",
+  "supportChannels": "Destek Kanalları",
+  "onsiteSupport": "Sahada Destek",
+  "onlineSupport": "Dijital/Online Destek",
+  "availableSupport": "Destek Verebileceğim Diller",
+  "addContactAddress": "İletişim Adresi Ekle",
+  "addFacebook": "Facebook adresinizi giriniz..",
+  "addInstagram": "Instagram adresinizi giriniz..",
+  "addTwitter": "Twitter adresinizi giriniz..",
+  "addLinkedin": "Linkedin adresinizi giriniz..",
+  "consentForm": "Aydınlatma Metni'ni okudum ve kabul ediyorum.",
+  "infoVerification": "Enkaz, yıkım, yardım ve destek ihtiyaçları konusunda verdiğim bilgilerin doğru ve teyit edilmiş olduğunu, bilgi kirliliği ve yanlış uygulamalara yol açmamak için gerekli tüm önlem ve tedbirleri aldığımı, vermiş olduğum bilgilerde meydana gelen değişiklik ve güncellemeleri bildireceğimi kabul ve beyan ederim.",
+  "interpreterList": "Tercüman Listesi",
+  "applyInterpreter": "Tercüman listesine asağıdaki tablodan ulaşabilirsiniz. Yeni tercüman başvurusu buradan yapabilirsiniz.",
+  "nameLastName": "Isim & Soyisim",
+  "translationLanguage": "Tercüme Dili",
+  "contact": "İletişim",
+  "interpreterNameLastName": "Tercüman Adı ve Soyadı",
+  "before": "Önceki",
+  "after": "Sonraki"
 }
