Appbar actions and bottom navigation bar added to home page

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -12,6 +12,7 @@
   "welcomeText": "الترجمة التطوعية",
   "welcomeHeader": "اعثر على مترجم بسرعة!",
   "welomeBody": "اعثر على مترجمين بأي لغة بسرعة وسهولة وتواصل معهم مباشرة على منصتنا!",
+  "homePage": "الصفحة الرئيسية",
   "beInterpreter": "كن مترجمًا",
   "searchInterpreter": "ابحث عن مترجم",
   "fAskedQuestions": "أسئلة مكررة",
