--- a/lang/en.json
+++ b/lang/en.json
@@ -12,6 +12,7 @@
   "welcomeText": "Volunteer Translator",
   "welcomeHeader": "Find an interpreter, fast!",
   "welomeBody": "Find an interpreter speaking any language quick, easy, and communicate directly with them through our platform!",
+  "homePage": "Home",
   "beInterpreter": "Become an interpreter.",
   "searchInterpreter": "Find an interpreter",
   "fAskedQuestions": "Frequently Asked Questions",
