--- a/lang/kr.json
+++ b/lang/kr.json
@@ -12,6 +12,7 @@
     "welcomeText": "Wergêrîya Xwebexşî",
     "welcomeHeader": "Zû wergerek peyda bike!",
     "welomeBody": "Zû û bi hêsanî wergêrên bi her zimanî bibîne û rasterast li ser platforma me bi wan re têkilî dane!",
+    "homePage": "Rûpelê Sereke",
     "beInterpreter": "Bibe Wergêr",
     "searchInterpreter": "Wergêrekî bibîne",
     "fAskedQuestions": "Pirsên pir caran tên pirsîn",
