--- a/lang/ru.json
+++ b/lang/ru.json
@@ -12,6 +12,7 @@
   "welcomeText": "Волонтёрский Перевод",
   "welcomeHeader": "Найдите переводчика за пару кликов!",
   "welomeBody": "Быстро и легко находите переводчиков любого языка и общайтесь с ними прямо на нашей платформе!",
+  "homePage": "Главная",
   "beInterpreter": "Стать Переводчиком",
   "searchInterpreter": "Найти Переводчика",
   "fAskedQuestions": "Часто задаваемые вопросы",
