--- a/lang/tr.json
+++ b/lang/tr.json
@@ -12,6 +12,7 @@
   "welcomeText": "Gönüllü Tercümanlık",
   "welcomeHeader": "Hızla tercüman bul!",
   "welomeBody": "Herhangi bir dilde hızla ve kolayca tercüman bulun ve onlarla doğrudan platformumuz üzerinden iletişim kurun!",
+  "homePage": "Ana Sayfa",
   "beInterpreter": "Tercüman Ol",
   "searchInterpreter": "Tercüman Bul",
   "fAskedQuestions": "Sıkça Sorulan Sorular",
