Hardcode strings moved to language res files

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -40,12 +40,34 @@
   "addLinkedin": "أدخل عنوان LinkedIn الخاص بك...",
   "consentForm": "لقد قرأت نص الخصوصية وأوافق عليه.",
   "infoVerification": "أوافق وأصرح بأن المعلومات التي قدمتها بشأن المساعدة والدعم صحيحة ومؤكدة ، وأنني اتخذت جميع الاحتياطات والتدابير اللازمة لمنع الاستخدم الغير قانوني للمعلومات والممارسات الخاطئة ، وأنني سأبلغ عن أي تغييرات وتحديثات في المعلومات التي قدمتها", 
-  "interpreterList": "قائمة المترجم",
   "applyInterpreter": "يمكنك الوصول إلى قائمة المترجم عبر الجدول في الاسفل. يمكن إجراء طلب جديد للمترجم هنا.",
   "nameLastName": "الاسم- الكنية",
-  "translationLanguage": "لغة الترجمة",
   "contact": "التواصل",
   "interpreterNameLastName": "اسم المترجم و الكنية",
   "before": "قبل",
-  "after": "بعد"
+  "after": "بعد",
+  "checkYourEmail": "تحقق من بريدك الإلكتروني",
+  "verificationMailDelivered": "لقد أرسلنا رمز التحقق إلى عنوان بريدك الإلكتروني.",
+  "verificationCode": "رمز التحقق",
+  "enterVerificationCode": "أدخل رمز التحقق",
+  "enterTheCode": "أدخل الرمز",
+  "returnLogin": "العودة إلى صفحة تسجيل الدخول",
+  "forgotPassword": "هل نسيت كلمة المرور",
+  "forgotPasswordInfo": "لا تقلق ، سنرسل لك الخطوات لإعادة تعيين كلمة المرور الخاصة بك.",
+  "email": "البريد الإلكتروني",
+  "emailHint": "عنوان بريدك الإلكتروني",
+  "resetPassword": "إعادة تعيين كلمة المرور",
+  "loginWithGoogle": "تسجيل الدخول مع جوجل",
+  "registerWithGoogle": "سجل مع جوجل",
+  "alreadyHaveAnAccount": "هل لديك حساب بالفعل؟ ",
+  "login": "تسجيل الدخول",
+  "wellcome": "مرحبا",
+  "interpreterList": "قائمة المترجم",
+  "interpreterListDescription": "يمكنك الوصول إلى قائمة المترجمين من الجدول أدناه.",
+  "nameSurname": "الاسم الكامل",
+  "chooseLanguage": "اختر اللغة",
+  "translationLanguage": "لغة الترجمة",
+  "contantInformation": "معلومات الاتصال",
+  "beInterpreterDescription": "املأ النموذج أدناه لتكون مترجمًا.",
+  "instagram": "إنستغرام"
 }
