--- a/lang/en.json
+++ b/lang/en.json
@@ -40,12 +40,33 @@
   "addLinkedin": "Enter your LinkedIn address.",
   "consentForm": "I have read and accept the Lighting Confirmation Text.",
   "infoVerification": "I accept and declare that the information I have provided on debris, demolition, aid and support needs is correct and confirmed, that I have taken all necessary precautions and measures to prevent information pollution and misapplications, and that I will notify any changes and updates in the information I have given.",
-  "interpreterList": "interpreter List",
   "applyInterpreter": "You can find the list of interpreter in the table below. You can apply for a new interpreter here.",
   "nameLastName": "Name & Surname",
-  "translationLanguage": "Translation Language",
   "contact": "Contact",
   "interpreterNameLastName": "Interpreter Name and Last Name",
   "before": "Before",
-  "after": "After"
+  "after": "After","checkYourEmail": "Check your email",
+  "verificationMailDelivered": "We sent the verification code to your email address.",
+  "verificationCode": "Verification code",
+  "enterVerificationCode": "Enter verification code",
+  "enterTheCode": "Enter the code",
+  "returnLogin": "Return to login page",
+  "forgotPassword": "Forgot password",
+  "forgotPasswordInfo": "Don't worry, we'll send you the steps to reset your password.",
+  "email": "Email",
+  "emailHint": "Your email address",
+  "resetPassword": "Reset password",
+  "loginWithGoogle": "Login with Google",
+  "registerWithGoogle": "Register with Google",
+  "alreadyHaveAnAccount": "Already have an account? ",
+  "login": "Login",
+  "wellcome": "Wellcome",
+  "interpreterList": "Interpreter List",
+  "interpreterListDescription": "You can access the interpreter list from the table below.",
+  "nameSurname": "Name Surname",
+  "chooseLanguage": "Choose language",
+  "translationLanguage": "Translation Language",
+  "contantInformation": "Contact Information",
+  "beInterpreterDescription": "Fill out the form below to be an interpreter.",
+  "instagram": "Instagram"
 }
