--- a/lang/kr.json
+++ b/lang/kr.json
@@ -40,12 +40,34 @@
     "addLinkedin": "Navnîşana Xwe ya Linkedinê Binivîse",
     "consentForm": "Min Nivîsara Zelalkirinê xwend û qebûl kir.",
     "infoVerification": "Di agahdariya ku min daye ez qebûl dikim û radigihînim ku agahdariya ku min li ser mayîn, hilweşandin, alîkarî û hewcedariyên piştgiriyê dane rast û piştrast in, ku min hemî tedbîr û tedbîrên pêwîst girtine ji bo pêşîgirtina li qirêjiya agahdarî û kiryarên xelet, û ku ez ê ji her guhertin û nûvekirinan ragihînim.",
-    "interpreterList": "Lîsteya Wergêran",
     "applyInterpreter": "Hûn dikarin lîsteya wergêran di tabloya jêrîn de bibînin. Hûn dikarin li vir ji bo wergerek nû serlêdan bikin.",
     "nameLastName": "Nav & Parşnav",
-    "translationLanguage": "Zimanê wergerê",
     "contact": "Têkelî",
     "interpreterNameLastName": "Nav û Paşnavê Wergêr",
     "before": "Berî",
-    "after": "Piştî"
+    "after": "Piştî",
+    "checkYourEmail": "E-postanê xwe kontrol bike",
+    "verificationMailDelivered": "Me kodek verastkirinê ji navnîşana e-nameya we re şandiye.",
+    "verificationCode": "Kodek verastkirinê",
+    "enterVerificationCode": "Kodek verastkirinê binivîse",
+    "enterTheCode": "Kodê binivîse",
+    "returnLogin": "Li ser rûpelê têketinê ve biçin",
+    "forgotPassword": "Şîfreya te heye bîr",
+    "forgotPasswordInfo": "Nikare bê xwestin, we şîfreya we ji nû ve çêkirinê pêşînê re şandin.",
+    "email": "E-name",
+    "emailHint": "Navnîşana e-nameya we",
+    "resetPassword": "Şîfreya ji nû ve çêkirinê",
+    "loginWithGoogle": "Bi Google têketin",
+    "registerWithGoogle": "Bi Google re têketin",
+    "alreadyHaveAnAccount": "Hûn jixwe hesabek hebûn? ",
+    "login": "Têketin",
+    "wellcome": "Xoşbûn",
+    "interpreterList": "Lîsteya Wergêran",
+    "interpreterListDescription": "Hûn dikarin ji tabloya jêrînê têketinê bi nav têketinê.",
+    "nameSurname": "Navê Binivîse",
+    "chooseLanguage": "Zimanê hilbijêre",
+    "translationLanguage": "Zimanê wergerê",
+    "contantInformation": "Agahdariya girêdayî",
+    "beInterpreterDescription": "Forma jêrînê binivîse ku pêşwazî bikin.",
+    "instagram": "Instagram"
 }
