--- a/lang/ru.json
+++ b/lang/ru.json
@@ -40,12 +40,34 @@
   "addLinkedin": "Введите свой адрес Linkedin..",
   "consentForm": " Я прочитал и согласен с условиями разъяснительного текста.",
   "infoVerification": "Я принимаю и заявляю, что информация, которую я предоставил о обломках, катастрофах, потребностях в помощи и поддержке, верна и подтверждена, что я принял все необходимые меры предосторожности и меры для предотвращения информационного загрязнения и неправильных действий, и что я буду уведомлять о любых изменениях и обновлениях в информации, которую я дал.",
-  "interpreterList": "Список Переводчиков",
   "applyInterpreter": "Список переводчиков вы можете найти в таблице ниже. Вы можете подать заявку на нового переводчика здесь.",
   "nameLastName": "Имя & Фамилия",
-  "translationLanguage": "Язык перевода",
   "contact": "Контакты",
   "interpreterNameLastName": "Полное Имя Переводчика",
   "before": "Назад",
-  "after": "Вперёд"
+  "after": "Вперёд",
+  "checkYourEmail": "Проверьте свою электронную почту",
+  "verificationMailDelivered": "Мы отправили код подтверждения на ваш адрес электронной почты.",
+  "verificationCode": "Код подтверждения",
+  "enterVerificationCode": "Введите код подтверждения",
+  "enterTheCode": "Введите код",
+  "returnLogin": "Вернуться на страницу входа",
+  "forgotPassword": "Забыли пароль",
+  "forgotPasswordInfo": "Не волнуйтесь, мы отправим вам шаги для сброса пароля.",
+  "email": "Эл. адрес",
+  "emailHint": "Ваш адрес электронной почты",
+  "resetPassword": "Сброс пароля",
+  "loginWithGoogle": "Войти с помощью Google",
+  "registerWithGoogle": "Зарегистрироваться с помощью Google",
+  "alreadyHaveAnAccount": "Уже есть аккаунт? ",
+  "login": "Авторизоваться",
+  "wellcome": "Добро пожаловать",
+  "interpreterList": "Список Переводчиков",
+  "interpreterListDescription": "Вы можете получить доступ к списку переводчиков из таблицы ниже.",
+  "nameSurname": "Имя Фамилия",
+  "chooseLanguage": "Выберите язык",
+  "translationLanguage": "Язык перевода",
+  "contantInformation": "Контактная информация",
+  "beInterpreterDescription": "Заполните форму ниже, чтобы стать переводчиком.",
+  "instagram": "Инстаграм"
 }
