--- a/lang/kr.json
+++ b/lang/kr.json
@@ -69,5 +69,7 @@
     "translationLanguage": "Zimanê wergerê",
     "contantInformation": "Agahdariya girêdayî",
     "beInterpreterDescription": "Forma jêrînê binivîse ku pêşwazî bikin.",
-    "instagram": "Instagram"
+    "instagram": "Instagram",
+    "newTranslatorLinkText": "Tu dikarî ji bo nûvekîşekê li vir têkildarî bikî.",
+    "translatorListLinkText": "Tu dikarin navnîşek têrkemîn ji vir hatine."
 }
