Register page kvkk updates news+

--- a/lang/kr.json
+++ b/lang/kr.json
@@ -69,5 +69,6 @@
     "translationLanguage": "Zimanê wergerê",
     "contantInformation": "Agahdariya girêdayî",
     "beInterpreterDescription": "Forma jêrînê binivîse ku pêşwazî bikin.",
-    "instagram": "Instagram"
+    "instagram": "Instagram",
+    "truthAck": "Ez qebûl dikim û radigihînim ku agahiyên ku min dane rast û piştrast in, ku min hemî tedbîr û tedbîrên pêwîst girtine ji bo pêşîgirtina li qirêjbûna agahdarî û kiryarên xelet, û her guhertin û nûvekirina agahdariya ku min daye ez ê ragihînim."
 }
