--- a/lang/ar.json
+++ b/lang/ar.json
@@ -69,5 +69,6 @@
   "translationLanguage": "لغة الترجمة",
   "contantInformation": "معلومات الاتصال",
   "beInterpreterDescription": "املأ النموذج أدناه لتكون مترجمًا.",
-  "instagram": "إنستغرام"
+  "instagram": "إنستغرام",
+  "truthAck": "أقبل وأقر بأن المعلومات التي قدمتها صحيحة ومؤكدة ، وأنني اتخذت جميع الاحتياطات والتدابير اللازمة لمنع تلوث المعلومات والممارسات الخاطئة ، وأنني سأبلغ عن أي تغييرات وتحديثات في المعلومات التي قدمتها"
 }
