--- a/lang/en.json
+++ b/lang/en.json
@@ -68,5 +68,6 @@
   "translationLanguage": "Translation Language",
   "contantInformation": "Contact Information",
   "beInterpreterDescription": "Fill out the form below to be an interpreter.",
-  "instagram": "Instagram"
+  "instagram": "Instagram",
+  "truthAck": "I accept and declare that the information I have given is correct and confirmed, that I have taken all necessary precautions and measures to prevent information pollution and wrong practices, and that I will notify any changes and updates in the information I have given."
 }
