--- a/lang/ru.json
+++ b/lang/ru.json
@@ -69,5 +69,6 @@
   "translationLanguage": "Язык перевода",
   "contantInformation": "Контактная информация",
   "beInterpreterDescription": "Заполните форму ниже, чтобы стать переводчиком.",
-  "instagram": "Инстаграм"
+  "instagram": "Инстаграм",
+  "truthAck": "Я принимаю и заявляю, что предоставленная мной информация верна и подтверждена, что я принял все необходимые меры предосторожности и меры для предотвращения информационного загрязнения и неправомерных действий, и что я буду уведомлять о любых изменениях и обновлениях в предоставленной мной информации."
 }
