--- a/lang/tr.json
+++ b/lang/tr.json
@@ -69,5 +69,6 @@
   "translationLanguage": "Çeviri Dili",
   "contantInformation": "İletişim Bilgileri",
   "beInterpreterDescription": "Çevirmen olmak için aşağıdaki formu doldurun.",
-  "instagram": "Instagram"
+  "instagram": "Instagram",
+  "truthAck": "Verdiğim bilgilerin doğru ve teyit edilmiş olduğunu, bilgi kirliliği ve yanlış uygulamalara yol açmamak için gerekli tüm önlem ve tedbirleri aldığımı, vermiş olduğum bilgilerde meydana gelen değişiklik ve güncellemeleri bildireceğimi kabul ve beyan ederim."
 }
