--- a/lang/ru.json
+++ b/lang/ru.json
@@ -70,5 +70,7 @@
   "contantInformation": "Контактная информация",
   "beInterpreterDescription": "Заполните форму ниже, чтобы стать переводчиком.",
   "instagram": "Инстаграм",
+  "newTranslatorLinkText": "Вы можете подать заявку на нового переводчика здесь.",
+  "translatorListLinkText": "Вы можете получить список переводчиков отсюда.",
   "truthAck": "Я принимаю и заявляю, что предоставленная мной информация верна и подтверждена, что я принял все необходимые меры предосторожности и меры для предотвращения информационного загрязнения и неправомерных действий, и что я буду уведомлять о любых изменениях и обновлениях в предоставленной мной информации."
 }
